@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: unset.c,v 1.195 2013/12/26 17:58:29 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: unset.c,v 1.196 2013/12/28 21:36:46 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - unset.c */
@@ -1811,7 +1811,9 @@ reset_command()
 #ifdef EAM_BOXED_TEXT
     unset_textbox_style();
 #endif
+#ifdef BACKWARDS_COMPATIBLE
     prefer_line_styles = FALSE;
+#endif
 
 #ifdef USE_MOUSE
     mouse_setting = default_mouse_setting;
